@@ -17,15 +17,14 @@ local CLOSE = CLOSE
 
 local ChangeLogData = {
 	"Changes:",
-		"• Add a mouseover name feature. To display the unit name on the mouse.",
-		"• Update gmotd.",
-		"• Fix for chat size after reload (hardcoded!!).",
-		"• Create an own AltPowerBar.",
-		"• Add skinning support/ profile for ProjectAzilroka.",
-		"• Rewrote the Blizzard Error handling.",
-		"• Add a SpecBar.",
-		"• Remove ObjectiveTracker hider.",
-		"• Update some skins.",
+		"• Add an ObjectiveTracker collapse function on Raid Bosses.",
+		"• Fix Chat Button, it will now get the actual size from the chat height.",
+		"• Update many skins.",
+		"• Update BigWigs and Details profiles.",
+		"• Create a mover for the SpecBar.",
+		"• Add an own MicroBar with right click functionality from the LocPanel.",
+		"• Update the skinning function for buttons to be transparent. Thx Simpy <3",
+		"• Layout Update.",
 		-- "• ",
 	" ",
 	"Notes:",
@@ -77,6 +76,7 @@ function MER:CreateChangelog()
 	icon.bg:Point("TOPLEFT", 2, -2)
 	icon.bg:Point("BOTTOMRIGHT", -2, 2)
 	icon.bg:SetTexture(MER.LogoSmall)
+	icon.bg:SetBlendMode("ADD")
 
 	local title = CreateFrame("Frame", nil, frame)
 	title:SetPoint("LEFT", icon, "RIGHT", 3, 0)
