@@ -1,3 +1,13 @@
+[b][color=orange]v3.17[/color], xx.xx.2018[/b][list]
+[*]Add an ObjectiveTracker collapse function on Raid Bosses.
+[*]Fix Chat Button, it will now get the actual size from the chat height.
+[*]Update many skins.
+[*]Update BigWigs and Details profiles.
+[*]Create a mover for the SpecBar.
+[*]Add an own MicroBar with right click functionality from the LocPanel.
+[*]Update the skinning function for buttons to be transparent. Thx Simpy <3
+[*]Layout Update.[/list]
+
 [b][color=orange]v3.16[/color], 29.12.2017[/b][list]
 [*]Add a mouseover name feature. To display the unit name on the mouse.
 [*]Update gmotd.
